# signal-glib

./: .editorconfig  .gitignore  .gitmodules  Makefile.am  Makefile.sources  configure.ac
src/: crypto-provider.c  crypto-provider.h  identity-key-store.c  identity-key-store.h  key-utils.h  pre-key-store.c  pre-key-store.h  sender-key-store.c  sender-key-store.h  session-store.c  signal-address.c  signal-address.h  signal-client.c  signal-glib-private.h  signal-glib.h  signal-identity.c  signal-identity.h  signal-main.c  signal-session-manager.c  signal-session-manager.h  signal-session.c  signal-session.h  signal-storage-keyfile.c  signal-storage-keyfile.h  signal-storage-private.h  signal-storage.c  signal-storage.h  signed-pre-key-store.h
src/storage/: identity-key-store.c  key-utils.c  sender-key-store.h  session-store.c  session-store.h  signed-pre-key-store.c  signed-pre-key-store.h
tests/: test-axolotl-client.c  test-client.c
tools/: gen-sources-makefile  tap-test
